<resources>
    <string name="app_name" translatable="false">More</string>
    <string name="facebook_app_id" translatable="false">426198088210355</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb426198088210355</string>
    <string name="need_read_phone">AFRICA NEWS requires READ_PHONE_STATE</string>
    <string name="go_to_settings">go to settings</string>
    <string name="exit">Exit</string>
    <string name="home">Home</string>
    <string name="follow">Follow</string>
    <string name="video">Video</string>
    <string name="me">me</string>
    <string name="empty">no data</string>
    <string name="error">error…retry</string>
    <string name="loading">Loading…</string>
    <string name="net_error">no internet</string>
    <string name="loading_finish">Loading finish</string>
    <string name="pull_down_to_refresh">pull to refresh</string>
    <string name="release_to_refresh">release to refresh</string>
    <string name="update_stories">%d stories updated for you</string>
    <string name="service_error">Oops, out of service</string>
    <string name="n_new_videos">%d new videos</string>
    <string name="network_error">Network unavailable. Try again later</string>
    <string name="no_more_stories">Oops, no more stories</string>
    <string name="channels">Channels</string>
    <string name="tap_channel">Tap to enter channel</string>
    <string name="edit">Edit</string>
    <string name="edit_hint">To reorder, hold down &amp; move</string>
    <string name="more_channels">More channels</string>
    <string name="done">Done</string>
    <string name="reader_mode">Reader Mode</string>
    <string name="web_mode">Web Mode</string>
    <string name="write_a_comment">Write a comment…</string>
    <string name="share_to_my_friend">Share to my friend</string>
    <string name="offline">Offline</string>
    <string name="title_name" translatable="false">MORE</string>
    <string name="refresh_hint">Read up to here, refresh to get new articles</string>
    <string name="report">Report</string>
    <string name="not_interested">Not Interested</string>
    <string name="register_or_login">Register/Log In</string>
    <string name="register_hint">To comment and save reading history</string>
    <string name="a" translatable="false">A</string>
    <string name="cancel">Cancel</string>
    <string name="install_twitter_first">Please install Twitter first</string>
    <string name="register_hint2">If you haven’t registered, the number entered below will be your More log-in account.</string>
    <string name="password_hint">Set Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_password_done">Password Reset Succeeded</string>
    <string name="reset_password2">Reset Password</string>
    <string name="password_hint2">Make sure it\'s 6&#8211;16 characters long.</string>
    <string name="password_hint3">Enter Password</string>
    <string name="password_hint4">Enter the password for %s</string>
    <string name="password_error">Password cannot be shorter than 6 characters.</string>
    <string name="password_error2">Password cannot be longer than 16 characters.</string>
    <string name="password_error3">Password must contain at least one letter and one number.</string>
    <string name="password_error4">Password can’t contain multiple consecutive numbers.</string>
    <string name="facebook_error">An error occurred while connecting to Facebook.</string>
    <string name="thirdpart_error">An error occurred while connecting to %s</string>
    <string name="register_or_login2">Register/Log In</string>
    <string name="remain_n_sms">Code sent. You have %d time left to request another one.</string>
    <string name="verify_mobile">Verify Mobile Number</string>
    <string name="verify_mobile2">We’ve sent you a 6-digit code to\n %1$s %2$s Change Number</string>
    <string name="send_code2">Send a test SMS&#8230;</string>
    <string name="send_code3">Please send an SMS to %1$s from %2$s %3$s with the verification code below</string>
    <string name="resend_code">Resend</string>
    <string name="countdown">Resend %ds</string>
    <string name="sending_code">Sending your code&#8230;</string>
    <string name="code_wrong">Incorrect code. Please try again.</string>
    <string name="code_expired">That code has expired. Please check it and try again.</string>
    <string name="wrong_password">The password is incorrect. Please try again.</string>
    <string name="wrong">Something went wrong, please try again.</string>
    <string name="code_wrong2">Certificate validation failure</string>
    <string name="code_wrong3">We have sent you the verification code 3 times within 24 hours. If you didn\'t receive it, please try using your social media to login.</string>
    <string name="send_sms">Send SMS</string>
    <string name="sent_sms">I\'ve Sent the SMS</string>
    <string name="send_sms_again">Send SMS Again</string>
    <string name="mobile_error">Please enter a valid mobile number.</string>
    <string name="not_registered">The mobile number has not been registered.</string>
    <string name="change_number">Change Number</string>
    <string name="auth_toke_type" translatable="false">access_token</string>
    <string name="username">username</string>
    <string name="select_region">For a better experience,\nplease select your region</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="sign_up">Create Account</string>
    <string name="log_in">Log In</string>
    <string name="log_out">Log Out</string>
    <string name="log_out_hint">Log Out of More?  You may miss important notifications.</string>
    <string name="sign_up_hint_1">By creating an account, you are agreeing to our  </string>
    <string name="sign_up_hint_2">Terms of Service  </string>
    <string name="sign_up_hint_3">  Privacy Policy.</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="find_account">Find Account</string>
    <string name="find_account2">To reset your password, please confirm your account first.</string>
    <string name="again">Press once again to exit</string>
    <string name="next">Next</string>
    <string name="new_password">New Password</string>
    <string name="password">Password</string>
    <string name="ke" translatable="false">Kenya</string>
    <string name="ng" translatable="false">Nigeria</string>
    <string name="changing_region">Changing</string>
    <string name="hide">Hide</string>
    <string name="show">Show</string>
    <string name="no_connectivity">Please check your internet connection and try again.</string>
    <string name="line_busy">Line busy. Please try later.</string>
    <string name="deposit_no_connectivity">No internet connection, try again.</string>
    <string name="token_expired">Your session has timed out. Please try again.</string>
    <string name="already_registered">The mobile number has already been registered.</string>
    <string name="account_frozen">You\'re Temporarily Locked</string>
    <string name="proceed">Continue</string>
    <string name="ok">OK</string>
    <string name="comeon">CONTINUE</string>
    <string name="facebook_login">Log In with Facebook</string>
    <string name="reg_or_login">Register/Login</string>
    <string name="or">or</string>
    <string name="same_passwd_error">New Password cannot be same as Old Password.</string>
    <string name="password_hint5">Verify Your Identity</string>
    <string name="password_hint6">Before accessing sensitive info, you need to verify your identity by entering old password.</string>
    <string name="succeeded">Succeeded</string>
    <string name="password_hint7">Old Password is required.</string>
    <string name="password_hint8">The password is incorrect. Please try again.</string>
    <string name="call_1">Free Call for Verify</string>
    <string name="call_2">Please call us with the number you registered with.</string>
    <string name="dial">Dial</string>
    <string name="opps">Opps</string>
    <string name="no_call">Seems that you haven\'t dialed the number yet, would you like to cancel dialling？</string>
    <string name="no_code">Didn\'t receive the code?</string>
    <string name="dialed">I\'ve Dialed the Number</string>
    <string name="dial_1">To complete this Transaction</string>
    <string name="dial_2">PLEASE DIAL</string>
    <string name="dial_3">Then Send Your Transaction Reference</string>
    <string name="dial_exit">If you have finished dialling, you can either go to Transactions to check details, or wait a bit longer for the results.</string>
    <string name="old_password">Old Password</string>
    <string name="try_again">Try Again</string>
    <string name="call">Call Instead</string>
    <string name="timeout">Session Timeout</string>
    <string name="mobile_hint">Add Mobile Number</string>
    <string name="mobile_hint2">Adding your mobile number helps you easily deposit / withdraw your money</string>
    <string name="ng_mobile_prefix" translatable="false">+234</string>
    <string name="kenya" translatable="false">Kenya</string>
    <string name="nigeria" translatable="false">Nigeria</string>
    <string name="ghana" translatable="false">Ghana</string>
    <string name="login">Register/Log In</string>
    <string name="login2">Log In</string>
    <string name="already_completed">Already Completed?</string>
    <string name="already_h">Already have an account? Log In</string>
    <string name="create_new">Create New Account</string>
    <string name="verify_account">Verify Account</string>
    <string name="change">Change</string>
    <string name="skip">Skip</string>
    <string name="you_need_a_more_account_to_communicate_with_others">You need a MORE account to \n communicate with others</string>
    <string name="login_with_your_social_media">login with your social media</string>
    <string name="we_will_never_post_anything_without_your_permission">We\'ll never post anything without your permission</string>
    <string name="join_with_mobile_number">Join with Mobile Number</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="change_avatar">Change Avatar</string>
    <string name="nick_name">Nickname</string>
    <string name="first_name">First Name</string>
    <string name="date_birth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="email">Email</string>
    <string name="last_name">Last Name</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="clear_all_cache">Clear all caches?</string>
    <string name="story_saved">Story Saved</string>
    <string name="can_read_stories_saved_offline">You can read the stories saved in \"Offline\" at any time without an internet connection.</string>
    <string name="obsolete_content">Obsolete content</string>
    <string name="sexual_content">Sexual content</string>
    <string name="violent_content">Violent, threatening content</string>
    <string name="fake_news">Fake news</string>
    <string name="ad_or_spam">Ad or spam</string>
    <string name="clickbait">Clickbait</string>
    <string name="media_wont_load">Media won\'t load</string>
    <string name="other">Other</string>
    <string name="today">Today</string>
    <string name="live">Live</string>
    <string name="result">Result</string>
    <string name="reader_dialog_title">Fonts can not be customized in WebMode, Please return to Reader Mode .</string>
    <string name="reader_dialog_switch_to_reader_mode">switch to reader mode</string>
    <string name="reader_dialog_cancel">cancel</string>
    <string name="confirm">Confirm</string>
    <string name="football_team">Team</string>
    <string name="football_gd" translatable="false">GD</string>
    <string name="football_pl" translatable="false">PL</string>
    <string name="football_pts" translatable="false">Pts</string>
</resources>