<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/tab_news"
        android:icon="@drawable/selector_home_bottom"
        android:enabled="true"
        android:title="@string/home"/>
    <item
        android:id="@+id/tab_follow"
        android:icon="@drawable/selector_follow_bottom"
        android:enabled="true"
        android:title="@string/follow"/>
    <item
        android:id="@+id/tab_video"
        android:icon="@drawable/selector_video_bottom"
        android:enabled="true"
        android:title="@string/video"/>
    <item
        android:id="@+id/tab_me"
        android:icon="@drawable/selector_offline_bottom"
        android:enabled="true"
        android:title="@string/offline"/>
</menu>