<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="8dp"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/obsolete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:text="@string/obsolete_content"
            android:textColor="#1b1e25"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/sexual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:text="@string/sexual_content"
            android:textColor="#1b1e25"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/violent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:text="@string/violent_content"
            android:textColor="#1b1e25"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/fake"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:text="@string/fake_news"
            android:textColor="#1b1e25"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/ad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:text="@string/ad_or_spam"
            android:textColor="#1b1e25"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/bait"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:text="@string/clickbait"
            android:textColor="#1b1e25"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/media"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:text="@string/media_wont_load"
            android:textColor="#1b1e25"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/other"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:text="@string/other"
            android:textColor="#1b1e25"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="11dp"
            android:background="#eaecef" />

        <TextView
            android:id="@+id/report_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="48dp"
            android:text="@string/cancel"
            android:textColor="#ca203a"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>