<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom_name="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <ImageView
            android:id="@+id/back_icon"
            android:layout_centerVertical="true"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:background="?android:selectableItemBackground"
            android:padding="19dp"
            app:srcCompat="@drawable/ic_back_svg"/>

        <TextView
            android:id="@+id/back_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:lineHeight="18sp"
            android:lineSpacingExtra="2sp"
            android:singleLine="true"
            android:text="@string/edit_profile"
            android:textColor="#262626"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/avatar_bar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@id/title_bar">

        <com.africa.news.widget.CircleImageView
            android:id="@+id/avatar"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/avatar" />

        <TextView
            android:id="@+id/user_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:maxWidth="140dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="26dp"
            android:singleLine="true"
            android:layout_toEndOf="@id/avatar"
            style="@style/FontStyleMedium"
            android:text="@string/reg_or_login"
            android:textColor="#262626"
            android:textSize="14sp"
            android:textStyle="normal"
            tools:text="0741133567sssssssssss" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginTop="29dp"
            android:layout_toStartOf="@+id/avatar_choose_arrow"
            style="@style/FontStyleNormal"
            android:gravity="end"
            android:text="@string/change_avatar"
            android:textColor="#9ca0ab"
            android:textSize="13sp"
            android:textStyle="normal"
            tools:text="Change Avatar" />

        <ImageView
            android:id="@+id/avatar_choose_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="20dp"
            android:tint="#979797"
            app:srcCompat="@drawable/ic_keyboard_arrow_right_black_24dp" />

    </RelativeLayout>

    <View
        android:id="@+id/title_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/avatar_bar"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="17dp"
        android:background="@color/scroll_bar" />

    <com.africa.news.user.LineTextViewPanel
        android:id="@+id/nick_name"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/title_line"
        custom_name:leftText="@string/nick_name" />

    <com.africa.news.user.LineTextViewPanel
        android:id="@+id/first_name"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/nick_name"
        custom_name:leftText="@string/first_name" />

    <com.africa.news.user.LineTextViewPanel
        android:id="@+id/last_name"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/first_name"
        custom_name:leftText="@string/last_name" />

    <com.africa.news.user.LineTextViewPanel
        android:id="@+id/date_birth"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/last_name"
        custom_name:leftText="@string/date_birth" />

    <com.africa.news.user.LineTextViewPanel
        android:id="@+id/gender"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/date_birth"
        custom_name:leftText="@string/gender" />

    <com.africa.news.user.LineTextViewPanel
        android:id="@+id/verified_email"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/gender"
        custom_name:leftText="@string/email" />

</RelativeLayout>
