<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="24dp"
        android:lineHeight="19sp"
        android:lineSpacingExtra="5sp"
        android:text="@string/clear_all_cache"
        android:textColor="#1b1e25"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="31dp"
        android:background="@drawable/progress_btn_bg_stroke"
        android:gravity="center"
        android:minWidth="126dp"
        android:minHeight="46dp"
        android:textAllCaps="true"
        android:text="@string/confirm"
        android:textColor="#353a45" />

    <TextView
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:minWidth="102dp"
        android:minHeight="46dp"
        android:textAllCaps="true"
        android:text="@string/cancel"
        android:textColor="#ff3a4f" />

</LinearLayout>