<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/ll_root"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="62dp"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:background="@color/white"
    android:paddingLeft="8dp"
    android:paddingRight="8dp">

    <ImageView
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:background="?android:selectableItemBackground"
        android:src="@mipmap/ic_launcher"
        android:layout_weight="19"
        android:gravity="center" />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="40dp"
        android:background="?android:selectableItemBackground"
        android:layout_weight="12"
        android:gravity="center" />

    <TextView
        android:id="@+id/btn_today"
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:background="?android:selectableItemBackground"
        android:drawableTop="@drawable/banner_sports"
        android:gravity="center"
        android:paddingTop="11dp"
        android:drawablePadding="-6dp"
        android:text="@string/today"
        android:textColor="@android:color/black"
        android:layout_weight="17"
        android:textSize="12sp"/>

    <TextView
        android:id="@+id/btn_live"
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:background="?android:selectableItemBackground"
        android:drawableTop="@drawable/banner_live"
        android:gravity="center"
        android:paddingTop="11dp"
        android:drawablePadding="-6dp"
        android:text="@string/live"
        android:textColor="@android:color/black"
        android:layout_weight="17"
        android:textSize="12sp"/>

    <TextView
        android:id="@+id/btn_result"
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:background="?android:selectableItemBackground"
        android:drawableTop="@drawable/banner_results"
        android:gravity="center"
        android:paddingTop="15dp"
        android:drawablePadding="-6dp"
        android:text="@string/result"
        android:textColor="@android:color/black"
        android:layout_weight="17"
        android:textSize="12sp"/>

    <TextView
        android:id="@+id/btn_home"
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:background="?android:selectableItemBackground"
        android:drawableTop="@drawable/banner_home"
        android:gravity="center"
        android:paddingTop="13dp"
        android:drawablePadding="-6dp"
        android:text="@string/home"
        android:textColor="@android:color/black"
        android:layout_weight="17"
        android:textSize="12sp"/>

</LinearLayout>