<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_marginLeft="40dp"
    android:layout_marginRight="40dp"
    android:layout_height="350dp"
    android:layout_gravity="center"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/bg_rect_4">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="24dp"
        android:gravity="center"
        android:text="@string/story_saved"
        android:textColor="#1b1e25"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:src="@drawable/icon_first_save" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="24dp"
        android:lineHeight="19sp"
        android:lineSpacingExtra="5sp"
        android:text="@string/can_read_stories_saved_offline"
        android:textColor="#1b1e25"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/first_save_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="62dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/bg_stroke_grey_23"
        android:gravity="center"
        android:minWidth="102dp"
        android:minHeight="46dp"
        android:text="@string/ok"
        android:textColor="#353a45"
        android:textSize="14sp" />

</LinearLayout>